--- a/projects/mfe-auth/src/app/auth/components/register/register.component.html
+++ b/projects/mfe-auth/src/app/auth/components/register/register.component.html
@@ -1,1 +1,67 @@
-<p>register works!</p>
+<div class="limiter">
+  <div class="container-login100">
+    <div class="wrap-login100">
+      <form
+        class="login100-form validate-form"
+        [formGroup]="registerForm"
+        (ngSubmit)="onSubmit()"
+      >
+        <span class="login100-form-title p-b-26"> Register </span>
+        <span class="login100-form-title p-b-48">
+          <i class="zmdi zmdi-font"></i>
+        </span>
+
+        <div class="wrap-input100 validate-input">
+          <input
+            class="input100"
+            type="text"
+            id="username"
+            formControlName="username"
+          />
+          <span class="focus-input100" data-placeholder="Username"></span>
+        </div>
+
+        <div
+          class="wrap-input100 validate-input"
+          data-validate="Valid email is: a@b.c"
+        >
+          <input
+            class="input100"
+            type="text"
+            id="email"
+            formControlName="email"
+          />
+          <span class="focus-input100" data-placeholder="Email"></span>
+        </div>
+
+        <div
+          class="wrap-input100 validate-input"
+          data-validate="Enter password"
+        >
+          <span class="btn-show-pass">
+            <i class="zmdi zmdi-eye"></i>
+          </span>
+          <input
+            class="input100"
+            type="password"
+            id="password"
+            formControlName="password"
+          />
+          <span class="focus-input100" data-placeholder="Password"></span>
+        </div>
+
+        <div class="container-login100-form-btn">
+          <div class="wrap-login100-form-btn">
+            <div class="login100-form-bgbtn"></div>
+            <button class="login100-form-btn">Create account</button>
+          </div>
+        </div>
+
+        <div class="text-center p-t-115">
+          <span class="txt1"> Already have an account? </span>
+          <a class="txt2" routerLink="/login"> Login </a>
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
