--- a/projects/mfe-auth/src/app/auth/components/login/login.component.html
+++ b/projects/mfe-auth/src/app/auth/components/login/login.component.html
@@ -1,7 +1,11 @@
 <div class="limiter">
   <div class="container-login100">
     <div class="wrap-login100">
-      <form class="login100-form validate-form">
+      <form
+        class="login100-form validate-form"
+        [formGroup]="loginForm"
+        (ngSubmit)="onSubmit()"
+      >
         <span class="login100-form-title p-b-26"> Welcome </span>
         <span class="login100-form-title p-b-48">
           <i class="zmdi zmdi-font"></i>
