--- a/projects/mfe-auth/src/app/auth/components/login/login.component.html
+++ b/projects/mfe-auth/src/app/auth/components/login/login.component.html
@@ -2,21 +2,34 @@
   <div class="container-login100">
     <div class="wrap-login100">
       <form
-        class="login100-form validate-form"
         [formGroup]="loginForm"
         (ngSubmit)="onSubmit()"
+        class="login100-form validate-form"
       >
         <span class="login100-form-title p-b-26"> Welcome </span>
         <span class="login100-form-title p-b-48">
           <i class="zmdi zmdi-font"></i>
         </span>
 
-        <div
-          class="wrap-input100 validate-input"
-          data-validate="Valid email is: a@b.c"
-        >
-          <input class="input100" type="text" name="email" />
+        <div class="wrap-input100 validate-input">
+          <input
+            class="input100"
+            type="text"
+            id="email"
+            formControlName="email"
+          />
           <span class="focus-input100" data-placeholder="Email"></span>
+          <div
+            *ngIf="
+              loginForm.get('email')?.invalid &&
+              (loginForm.get('email')?.touched || loginForm.get('email')?.dirty)
+            "
+            class="text-danger"
+          >
+            <small *ngIf="loginForm.get('email')?.errors?.['required']"
+              >Email is required.</small
+            >
+          </div>
         </div>
 
         <div
@@ -26,14 +39,33 @@
           <span class="btn-show-pass">
             <i class="zmdi zmdi-eye"></i>
           </span>
-          <input class="input100" type="password" name="pass" />
+          <input
+            class="input100"
+            type="password"
+            id="password"
+            formControlName="password"
+          />
           <span class="focus-input100" data-placeholder="Password"></span>
+          <div
+            *ngIf="
+              loginForm.get('password')?.invalid &&
+              (loginForm.get('password')?.touched ||
+                loginForm.get('password')?.dirty)
+            "
+            class="text-danger"
+          >
+            <small *ngIf="loginForm.get('password')?.errors?.['required']"
+              >Password is required.</small
+            >
+          </div>
         </div>
 
         <div class="container-login100-form-btn">
           <div class="wrap-login100-form-btn">
             <div class="login100-form-bgbtn"></div>
-            <button class="login100-form-btn">Login</button>
+            <button class="login100-form-btn" [disabled]="!formValidity()">
+              Login
+            </button>
           </div>
         </div>
 
