test host pipeline v2

--- a/projects/mfe-host/src/app/components/home/home.component.html
+++ b/projects/mfe-host/src/app/components/home/home.component.html
@@ -1,3 +1,3 @@
 <p>home works!</p>
-<span>TEST HOST PIPELINE</span>
+<span>TEST HOST PIPELINE v2</span>
 <button (click)="onLogout()">Logout</button>
