test auth pipeline

--- a/projects/mfe-auth/src/app/app.component.html
+++ b/projects/mfe-auth/src/app/app.component.html
@@ -1,5 +1,5 @@
 <main class="main">
-  <div class="content">REMOTE AUTH APP</div>
+  <div class="content">REMOTE AUTH APP test pipeline</div>
 </main>
 
 <router-outlet />
